# twitch

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  requirements.lock.txt
.github/workflows/: build-desktop.yml
backend/: banwords.example.txt  banwords.txt  pyproject.toml  requirements-gpu.txt  requirements.txt  start.bat
backend/examples/: build_dual_track_vegas.py  build_padding_probe_vegas.py  compare_asr.py  decisions.example.json  mock_transcript.json  smoke_mock.py
backend/src/twitch_cut/: __init__.py  cache.py  cli.py  config.py  decisions.py  ffmpeg_tools.py  gigaam_asr.py  logging_setup.py  profanity.py  timecode.py  transcription.py  vegas_export.py  whisper_cpp.py
backend/src/twitch_cut/llm/: __init__.py  exporter.py  importer.py  model.py  prompt.py  segments.py
backend/src/twitch_cut/server/: __init__.py  app.py  media.py  paths.py  projects.py  runner.py  schemas.py  settings.py  state.py  waveform.py
backend/tests/: conftest.py  test_decisions.py  test_llm_cli_roundtrip.py  test_llm_exporter.py  test_llm_importer.py  test_llm_segments.py  test_profanity.py  test_server_app.py  test_server_media.py  test_server_projects.py  test_server_runner.py  test_server_ws.py  test_timecode.py  test_vegas_export.py  test_whisper_cpp.py
desktop/: README.md  index.html  package-lock.json  package.json  postcss.config.cjs  splash.html  tailwind.config.cjs  vite.config.ts
desktop/electron/: bootstrap.ts  main.ts  preload.ts  tsconfig.json
desktop/src/: App.tsx  AppShell.tsx  api.ts  main.tsx  splash.ts  styles.css
desktop/src/components/: CommandPalette.tsx
desktop/src/hooks/: useHotkey.ts  useJobEvents.ts  useUndoable.ts
desktop/src/lib/: cn.ts  format.ts  platform.ts  timelineActions.ts  transcript.ts
desktop/src/screens/: DashboardScreen.tsx  ExportScreen.tsx  (+4 more)
(+28 files in other folders)
